=========================================================================
CHANGE LOG
=========================================================================

2007-12-06  Warren L. DeLano <warren@delsci.com>	

	* first CIF reading code (barely functional)
	
2007-12-05  Warren L. DeLano <warren@delsci.com>	

	* anisotropic B factors now preserved in session files
	
	* cartoon_ladder_mode, cartoon_ladder_color, cartoon_ring_color,
	  cartoon_ring_width, cartoon_ring_radius, cartoon_ladder_radius
	  can all now be set per-atom (per-residue, really)

2007-12-04  Warren L. DeLano <warren@delsci.com>	

	* added additional workaround for reading tricky PQR files

	* cartoon_ring_mode can now be set per-atom (per-residue, really)

2007-11-30  Warren L. DeLano <warren@delsci.com>	

	* ANISOU records now supported in PDB files

        * ellipsoid representation (show ellipsoid, if ANISOU provided)

2007-11-29  Warren L. DeLano <warren@delsci.com>	

	* restored Tcl8.3 compatibility with file open
	
2007-11-28  Warren L. DeLano <warren@delsci.com>	

	* added support for simple raster3d ellipsoids (rastep compat.)
	
2007-11-27  Warren L. DeLano <warren@delsci.com>	

	* warning added for attempted bond creation between objects
	
2007-11-19  Warren L. DeLano <warren@delsci.com>

	* validated binary GRD reader (versus GVIEW with .kont files)
	
	* fixed crash bug with errorneous pseudoatom input
	
2007-11-16  Warren L. DeLano <warren@delsci.com>

	* fixed bug in binary .grd reader code (or NOT...still unclear)
	
2007-11-11  Warren L. DeLano <warren@delsci.com>

	* retain_order is now object-specific

	* restricted geom rebuilds after mask
	
2007-10-31  Warren L. DeLano <warren@delsci.com>

	* added a couple of new CGO examples
	
2007-10-30  Warren L. DeLano <warren@delsci.com>

	* direct SDF output for single and multi-state objects
	
2007-10-29  Warren L. DeLano <warren@delsci.com>

	* added workaround for writing PQR files with long coordinates
	